--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     username: admin
     password: adminBD@321
     database-plataform: org.hibernate.dialect.H2Dialect
+server:
+  port: ${PORT:8080}
+  servlet:
+    contextPath: /transacoes-api
